--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <linkw rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-  <title>Netflix</title>
+  <title>Filmpire</title>
 </head>
 
 <body>
